# lay-x11

./: .gitignore  CLAUDE.md  Cargo.toml  HOW_IT_WORKS.md  LICENSE  MODEL_CANDIDATES.md  README.md  VERSIONING.md  dev-reload.sh  install-extension.sh  install.sh  update.sh
corpus/: README.md
docs/publicity/: README.md  devto-article-en.md  habr-article-ru-habr-ready.md  habr-article-ru.md  habr-form-ru.md  platforms-ru.md  short-posts.md  submission-checklist.md  tproger-pitch-ru.md
eval/: README.md  two_word_cases.tsv  two_word_model_eval.md  two_word_model_eval_consensus_arbiter.md  two_word_model_eval_sage_20.md  two_word_model_eval_sage_arbiter.md  two_word_model_eval_tiny2_20.md  two_word_model_eval_tiny2_arbiter.md  two_word_model_eval_tiny2_arbiter_200.md
examples/: x11_probe.rs
examples/config/: no_replace.example.txt  replacements.example.json
extension/lay@radislabus-star.github.io/: extension.js  lay-impl.js  metadata.json
scripts/: bump-version-from-git.sh  check-lay-full.sh  eval_two_word_models.py  generate_two_word_cases.py  install-remote.sh  package-extension.sh  render-publicity-demo.py  run_runtime_smoke.py
src/: dict.rs  lem.rs  lib.rs  llm.rs  main.rs  ngram.rs  quality.rs  stats.rs  x11_layout.rs
systemd/: lay-daemon.service
