[package]
name = "lay"
version = "0.2.0"
edition = "2021"
description = "Double Shift layout rescue for Linux/X11"
license = "MIT"
readme = "README.md"
rust-version = "1.75"
keywords = ["keyboard", "x11", "layout", "russian", "punto"]
categories = ["command-line-utilities"]

[[bin]]
name = "lay"
path = "src/main.rs"

[[bin]]
name = "lay-daemon"
path = "src/bin/lay_daemon.rs"

[[bin]]
name = "lay-test-input"
path = "src/bin/lay_test_input.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
evdev = "0.13"
x11rb = { version = "0.13", features = ["xkb", "xtest"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
